test/spec_vectors/table_set/fail/module_3.wat
(module (table $t 10 externref) (func $type-value-empty-vs-externref (table.set $t (i32.const 1))))